Fix display images in report preview are overflow

--- a/assets/opstools/ProcessReports/ProcessReports.css
+++ b/assets/opstools/ProcessReports/ProcessReports.css
@@ -66,3 +66,7 @@ li.rpreport-locked {
 .navbar .nav>li>a {
 	color: #777 !important;
 }
+
+.jsr-image {
+	overflow: hidden !important;
+}
